# lab-qt5-qt6-qml

./: .gitignore  README.md
CustomKey/: CMakeLists.txt  CustomButtonKeyboard.qml  Keyboard.qml  KeyboardController.qml  main.cpp  main.qml  qml.qrc
MenuInteractivo/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
MenuInteractivo/pages/: Page_1.qml  Page_2.qml  Page_3.qml  Page_4.qml  Page_5.qml  Page_6.qml  Page_7.qml  Page_8.qml
